kubernetes/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wander

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: wander
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: manish181623/test-be:latest-v2
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wander
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      # nodePort: 31100
