kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wander
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: manish181623/test-fe:latest-v2
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wander
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      # nodePort: 31000
